align fixes

--- a/CV [HTML + CSS]/cv.css
+++ b/CV [HTML + CSS]/cv.css
@@ -10,11 +10,13 @@ body{
 .header{
     background-color: blue;
     color: white;
-    text-align: center;
+    display: grid;
+    justify-content: center;
     font-size: 1.2em;   
-    margin-top: 0; 
+    height: 20%;
 }
 
 .header > h1{
-    margin-top: 0;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
